# etl_bi_v2

./: .env.docker.example  .env.example  .env.local.example  .gitignore  README.md  docker-compose.local.yml  pyproject.toml  requirements.txt
dags/: _template_oracle_ds_to_dw_dag.py  cleanup_dimensions_retention_dag.py  load_ds_airbyte_dag.py  load_ds_airbyte_dimensions_dag.py  load_dw_dbt_dag.py  load_dw_dbt_dimensions_dag.py  load_sx_detalhes_operacao_f_dag.py  load_sx_equipamento_d_dag.py  load_sx_estado_d_dag.py  load_sx_fazenda_d_dag.py  load_sx_frente_d_dag.py  load_sx_operacao_d_dag.py  load_sx_ordem_servico_d_dag.py  monitor_pipeline_execution_dag.py  orchestrate_ds_dw_dag.py  orchestrate_ds_dw_dimensions_dag.py  pipeline_patterns.py  reproc_sx_equipamento_d_dag.py  schedule_dimensions_incremental_dag.py  schedule_sx_equipamento_d_full_dag.py  schedule_sx_equipamento_d_incremental_dag.py  schedule_sx_estado_d_full_dag.py  schedule_sx_estado_d_incremental_dag.py
dbt/solix_dbt/: dbt_project.yml  package-lock.yml  profiles.yml
docs/: AIRBYTE.md  AIRFLOW_DAGS.md  CONTAINERS.md  DW_WATERMARK_OPERACAO.md  FLUXO_SX_EQUIPAMENTO_D.md  GITHUB_SETUP.md  INCREMENTAL_LOADING.md  TEMPLATES.md
infra/airflow/: Dockerfile  requirements-airflow.txt
scratch/: generate_ds_models.py
scripts/: load_local_env.ps1  run_ds_sx_estado_d.ps1  run_dw_sx_estado_d.ps1  run_full_sx_estado_d.ps1  setup_git_remotes.ps1  switch_env_docker.ps1  switch_env_local.ps1
sql/control/: alter_ctl_batch_execution.sql  alter_ctl_load_audit.sql  create_ctl_batch_execution.sql  (+6 more)
src/common/: utils.py  (+5 more)
(+87 files in other folders)
